added mininet to create topology for unit tests

--- a/tox.ini
+++ b/tox.ini
@@ -5,4 +5,5 @@ envlist = py27
 setenv = VIRTUAL_ENV={envdir}
 deps = nose
        requests
+       -egit+https://github.com/mininet/mininet#egg=Mininet
 commands = nosetests {posargs}
