--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Compiled python modules.
 *.pyc
 
-# Setuptools distribution folder.
+# Setuptools build and distribution folder.
 /dist/
+/build/
 
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
@@ -17,5 +18,3 @@
 #venv
 .venv/
 
-#Build dir
-build/
