--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,7 @@
 include README.rst
 include LICENSE
 include NOTICE
+include tox.ini
+recursive-include 3rdparty *
+recursive-include hpsdnclient *.py
+
