--- a/tox.ini
+++ b/tox.ini
@@ -5,4 +5,4 @@ envlist = py26,py27,py33
 setenv = VIRTUAL_ENV={envdir}
 deps = nose
        requests
-commands = nosetests --with-xunit {posargs}
+commands = nosetests --with-xunit -w hpsdnclient/tests/unit {posargs}
