Added unit tests and functional tests. Library is now a little more robust.

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,15 @@
 [tox]
-envlist = py26,py27,py33
+envlist = py26,py27,py33,functional
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
 deps = nose
+       nose-cov
+       mock
+       httmock
+       httpretty
        requests
-commands = nosetests --with-xunit -w hpsdnclient/tests/unit {posargs}
+commands = nosetests --with-xunit --with-coverage --cover-package hpsdnclient -w hpsdnclient/tests/unit {posargs}
+
+[testenv:functional]
+commands = nosetests --with-xunit --with-coverage --cover-package hpsdnclient -w hpsdnclient/tests/functional {posargs}
