Sphinxy docstrings added for CoreMixin, Docs environment added to Tox, Requirements.txt added

--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,17 @@ setenv = VIRTUAL_ENV={envdir}
 deps = nose
        nose-cov
        mock
-       httmock
        httpretty
        requests
 commands = nosetests --with-xunit --with-coverage --cover-package hpsdnclient -w hpsdnclient/tests/unit {posargs}
 
 [testenv:functional]
 commands = nosetests --with-xunit --with-coverage --cover-package hpsdnclient -w hpsdnclient/tests/functional {posargs}
+
+[testenv:docs]
+basepython=python
+changedir=docs
+deps=sphinx
+     requests
+commands=
+    sphinx-build -W -b html -d build/doctrees/ source/ build/
