--- a/docs/source/_themes/flask_small/theme.conf
+++ b/docs/source/_themes/flask_small/theme.conf
@@ -7,4 +7,4 @@ pygments_style = flask_theme_support.FlaskyStyle
 [options]
 index_logo = ''
 index_logo_height = 120px
-github_fork = ''
+github_fork = '<a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>'
