--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,8 @@ include README.rst
 include LICENSE
 include NOTICE
 include tox.ini
+include requirements.txt
+include test-requirements.txt
 recursive-include 3rdparty *
 recursive-include hpsdnclient *.py
 
