--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,11 @@
 [tox]
-envlist = py26,py27,py33,functional
+envlist = py26,py27,py33,functional,docs,flake8
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
-deps = nose
-       nose-cov
-       mock
-       httpretty
-       requests
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
+
 commands = nosetests --with-xunit --with-coverage --cover-package hpsdnclient -w hpsdnclient/tests/unit {posargs}
 
 [testenv:functional]
@@ -20,3 +18,10 @@ deps=sphinx
      requests
 commands=
     sphinx-build -W -b html -d build/doctrees/ source/ build/
+
+[testenv:pep8]
+commands=
+   flake8 hpsdnclient
+
+[flake8]
+exclude=tests
