--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: python
-python:
-  - "2.7"
-# command to install dependencies
-install: "pip install -r requirements.txt -r test-requirements.txt"
-# command to run tests
-script: tox -e py27
+env:
+  - TOXENV=py27
+  - TOXENV=docs
+  - TOXENV=pep8
+
+install: 
+  "pip install -r requirements.txt -r test-requirements.txt"
+
+script: 
+  - tox  
