--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ changedir=docs
 deps=sphinx
      requests
 commands=
-    sphinx-build -W -b html -d build/doctrees/ source/ build/
+    sphinx-build -b html -d build/doctrees/ source/ build/
 
 [testenv:pep8]
 commands=
